
Severity   : normal
Frequency  : always
Bugzilla   : 3244
Description: Addition of EXT3_FEATURE_RO_COMPAT_DIR_NLINKS flag for
	     > 32000 subdirectories
Details    : Add EXT3_FEATURE_RO_COMPAT_DIR_NLINK flag to 
	     EXT3_FEATURE_RO_COMPAT_SUPP. This flag will be set whenever
	     subdirectory count crosses 32000. This will aid e2fsck to
	     correctly handle more than 32000 subdirectories.
	
------------------------------------------------------------------------------

TBD         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.10
       * Support for kernels:
        2.6.16.21-0.8 (SLES10)
        2.6.9-42.0.8EL (RHEL 4)
        2.6.5-7.276 (SLES 9)
        2.4.21-47.0.1.EL (RHEL 3)
        2.6.12.6 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.39.cfs2-0

Severity   : major
Frequency  : liblustre (e.g. catamount) on a large cluster with >= 8 OSTs/OSS
Bugzilla   : 11684
Description: System hang on startup
Details    : This bug allowed the liblustre (e.g. catamount) client to
	     return to the app before handling all startup RPCs.  This
	     could leave the node unresponsive to lustre network traffic
	     and manifested as a server ptllnd timeout.

Severity   : enhancement
Bugzilla   : 11667
Description: Add "/proc/sys/lustre/debug_peer_on_timeout"
	     (liblustre envirable: LIBLUSTRE_DEBUG_PEER_ON_TIMEOUT)
	     boolean to control whether to print peer debug info when a
	     client's RPC times out.

Severity   : normal
Frequency  : always
Bugzilla   : 10214
Description: make O_SYNC working on 2.6 kernels
Details    : 2.6 kernels use different method for mark pages for write, 
	     so need add a code to lustre for O_SYNC work.

Severity   : minor
Frequency  : always
Bugzilla   : 11110
Description: Failure to close file and release space on NFS
Details    : Put inode details into lock acquired in ll_intent_file_open. 
	     Use mdc_intent_lock in ll_intent_open to properly